* Dialer: verify that enterqueue_timestamp is set
* Campaigns Out: fix warning on line that start with a comma
* Agent Console: verify that $_SESSION['elastix_agent_audit'] is set
* Agent Console: report most causes of "spontaneous" agent disconnection
* Agent Console: implement ability to save form information after call is
  disconnected. To use properly, the Wrapuptime parameter in the queue must
  be set to an appropriate value.
* Agent Console: fix reference to string without translation
* Agent Console: fix incorrect javascript in time counter reset
* Agent Console: fix function call with insufficient parameters
* Calls Details: remove reference to not-used status variable, including use
  of undefined $_POST index.

1.5-3.2
* Form Designer: fix missing string translation
* Agent Console: fix reference for nonexistent icon image. 
* Configuration: allow to save settings that include blank login, and
  blank out the password in that case, to use settings from manager.conf.
* Dialer: store Asterisk 1.6.x Bridge event as Link in current_calls.
* Dialer: newer FreePBX versions store trunk information in table 
  'asterisk.trunks' instead of 'asterisk.globals' as previous versions did.
  The dialer daemon must look now on 'asterisk.trunks' if it exists. 
* Dialer: seems newer FreePBX versions store DAHDI trunk information as DAHDI
  not ZAP as previous versions. The dialer now needs to check under both names
  when supplied a DAHDI trunk.
* Dialer: use queue show instead of show queue for free agent report. 
* Campaigns Out: modify CSV report of completed calls to add Uniqueid and all
  attributes defined for each call.
* Campaigns Out: previous fix for new campaign selection broke on old 
  Elastix versions. Fix it properly for all Elastix versions.
* Dialer: Handle Bridge event fired by Asterisk 1.6.2.x instead of Link

1.5-3.1
* Agents: Fix regression that prevented new agents from being created. Fixes
  Elastix bug #299.